--- a/configuration.properties
+++ b/configuration.properties
@@ -5,3 +5,6 @@ passwordAdmin=samnickel
 login=abowfinc1@ning.com
 password=emeryvassar
 title=cybertek-bnb
+reservationDbUrl=jdbc:room_reservation_qa:thin:room-reservation-qa.cxvqfpt4mc2y.us-east-1.rds.amazonaws.com:5432:xe
+reservationDbUsername=qa_user
+reservationDbPassword=Cybertek11!
