--- a/configuration.properties
+++ b/configuration.properties
@@ -5,3 +5,4 @@ passwordAdmin=samnickel
 login=abowfinc1@ning.com
 password=emeryvassar
 title=cybertek-bnb
+urlAssert=https://cybertek-reservation-qa.herokuapp.com/sign-in
